-
Bug
-
Resolution: Done
-
P1: Critical
-
4.7.0
-
None
-
Symbain ^3
-
5feca34327eb661cc84e1d6f79052dcdbc1a09c4
When ever we create an object of QSslCertificate when the sonera 3G Sim is in mobile then, object creation fails and applications jams.
the code snippet is taken from http://wiki.forum.nokia.com/index.php/TSQ001529_-_Showing_certificate_details_in_Qt
QSslCertificate* iCrt; // Selecting a certificate from the file dialog QString crtFilename = QFileDialog::getOpenFileName(this,QString() ,tr("Certificate Files (*.der *.pem)")); QFile crtFile(crtFilename); if(!crtFile.open(QIODevice::ReadOnly)) { return ; } else { if(crtFilename.contains(".der")) { // Loading DER certificate iCrt = new QSslCertificate(&crtFile,QSsl::Der); // this line fails and application jams when sonera sim is inserted // else this will pass and all information for the selected certificate is fetched } else { // Loading PEM certificate iCrt = new QSslCertificate(&crtFile,QSsl::Pem); } QStringList issuerInfo; //Fetching the issuer info issuerInfo.append(iCrt->issuerInfo(QSslCertificate::Organization)); LogMsg(issuerInfo.at(0)); }
For testing we used a sample der file to load which we use for signing sis.
also one more observation is when sonera sim is inserted the phone certificates is having some certificates which is attached as screenshot.
for any other sim this list is empty.
- relates to
-
QTBUG-13033 QSslSocketPrivate::systemCaCertificates() hangs sometimes on Symbian
-
- Closed
-
-
QTBUG-15126 QSslSocket::systemCaCertificates() hangs in N8 when using SIM cards whcih are having their own root CA certificates/user certiticates
-
- Closed
-
- resulted in
-
QTBUG-15218 performance - retrieving CA certificates from SIM blocks QSslSocketPrivate::systemCaCertificates() for too long
-
- Closed
-